<resources>
    <string name="app_name">Pocket Pal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_privacy">I accept the terms and privacy policy</string>
    <string name="logo">logo</string>
    <string name="fullName">Full Name</string>
    <string name="begin">begin</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="main_activity">Main Activity</string>
    <string name="initialText1">Simplify the way you manage your expenses.</string>
    <string name="initialText2">Get a clear overview and start making smarter financial decisions today</string>
    <string name="initialText3">Ever wonder where your hard-earned money disappears? Uncover your spending patterns and gain valuable insights</string>
    <string name="records">Records</string>
    <string name="tempInitials">Hi,Yash</string>
    <string name="set_budget">Set Monthly Budget</string>
    <string name="income">Income</string>
    <string name="total">Total</string>
    <string name="add_profile_icon">Add profile icon</string>
    <string name="budget_field">₹ 0.0000</string>
    <string name="budget">Budget</string>
    <string name="save">Save</string>
    <string name="total_spent">Total Spent</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="home">Home</string>
    <string name="add_item_to_expences">ADD ITEM TO EXPENCES</string>
    <string name="scan_barcode">SCAN BARCODE</string>
    <string name="add_manually">ADD MANUALLY</string>
    <string name="cancel">Cancel</string>
    <string name="rg_space">|</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="add_notes">Add notes(optional)</string>
    <string name="type">Type</string>
    <string name="card">Card</string>
    <string name="upi">Upi</string>
    <string name="cash">Cash</string>
    <string name="baby">Baby</string>
    <string name="beauty">Beauty</string>
    <string name="bills">Bills</string>
    <string name="clothing">Clothing</string>
    <string name="education">Education</string>
    <string name="electronics">Electronics</string>
    <string name="entertainment">Entertainment</string>
    <string name="food">Food</string>
    <string name="car">Car</string>
    <string name="health">Health</string>
    <string name="insurance">Insurance</string>
    <string name="sport">Sport</string>
    <string name="social">Social</string>
    <string name="shopping">Shopping</string>
    <string name="tax">Tax</string>
    <string name="telephone">Telephone</string>
    <string name="transportation">Transportation</string>
    <string name="initialSpentAmount">₹0</string>
    <string name="spentAmount">-₹0</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ocr_text">Upload from gallery</string>
    <string name="no_notes">No notes</string>
    <string name="no_history">No History!</string>
    <string name="no_recent_transactions">No Recent Transactions!</string>
</resources>