<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/item_records"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/clickable_background"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/sport" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/iv_category"
            android:fontFamily="@font/alata"
            android:text="@string/sport" />

        <ImageView
            android:id="@+id/iv_accountType"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_below="@id/tv_category"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/iv_category"
            android:src="@drawable/cash" />

        <TextView
            android:id="@+id/tv_accountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_category"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/iv_accountType"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:text="@string/cash" />

        <TextView
            android:id="@+id/spentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:text="@string/spentAmount"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>