<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity.Fragments.ExpenseDetails">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvCancel"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/cancel"
            android:paddingStart="5dp"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvSave"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/save"
            android:paddingStart="5dp"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toEndOf="@id/tvCancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <RadioGroup
            android:id="@+id/radioGroupExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCancel"
            app:layout_constraintVertical_bias="0.03">

            <RadioButton
                android:id="@+id/rbIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/income"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/rg_space"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/expense"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/rg_space"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/transfer"
                android:textAllCaps="true"
                android:visibility="gone" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupExpense"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupExpense"
            app:layout_constraintVertical_bias="0.03" />

        <androidx.cardview.widget.CardView
            android:id="@+id/typeCardView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/categoryCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvType"
            app:layout_constraintVertical_bias="0.03">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivAccount"
                    android:layout_width="26dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/wallet" />

                <TextView
                    android:id="@+id/tvAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/account"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/categoryCardView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_16sdp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/typeCardView"
            app:layout_constraintTop_toBottomOf="@id/tvCategory"
            app:layout_constraintVertical_bias="0.03">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/category" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/category"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLay_Expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryCardView"
            app:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/alata"
                android:hint="@string/budget_field"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLay_Notes"
            android:layout_width="0dp"
            android:layout_height="@dimen/_164sdp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLay_Expense"
            app:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/alata"
                android:gravity="start"
                android:hint="@string/add_notes"
                android:inputType="textMultiLine"
                android:textColorHint="@color/soothingBlack"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>